# libskeleton

./: .clang-tidy  .gitignore  CMakeLists.txt  Changes.md  README.md  requirements.txt
examples/: CMakeLists.txt
src/libskeleton/core/: CMakeLists.txt  hello.cpp  hello.hpp  hello.test.cpp
src/libskeleton/core/details/: private_header.hpp
